--- a/ros2_interface/CMakeLists.txt
+++ b/ros2_interface/CMakeLists.txt
@@ -10,16 +10,14 @@ find_package(ament_cmake REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(std_msgs REQUIRED)
 
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # uncomment the line when a copyright and license is not present in all source files
-  #set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # uncomment the line when this package is not in a git repo
-  #set(ament_cmake_cpplint_FOUND TRUE)
-  ament_lint_auto_find_test_dependencies()
-endif()
+add_executable(lidar_node src/shelfino_lidar_publisher.cpp)
+ament_target_dependencies(talklidar_nodeer rclcpp std_msgs)
+
+install(TARGETS
+  lidar_node
+  DESTINATION lib/${PROJECT_NAME})
 
 ament_package()
