--- a/ros2_interface/CMakeLists.txt
+++ b/ros2_interface/CMakeLists.txt
@@ -17,8 +17,15 @@ include_directories(
   include
 )
 
-add_executable(lidar_node src/shelfino_lidar_publisher.cpp)
-ament_target_dependencies(lidar_node rclcpp std_msgs)
+add_executable(lidar_node 
+  src/shelfino_lidar_publisher.cpp
+  src/Subscriber.cpp
+)
+ament_target_dependencies(lidar_node rclcpp std_msgs sensor_msgs)
+
+target_link_libraries(pose_pub_node
+  ${rclcpp_LIBRARIES} -lzmq 
+)
 
 install(TARGETS
   lidar_node
