--- a/ros2_interface/CMakeLists.txt
+++ b/ros2_interface/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(ament_cmake REQUIRED)
 # find_package(<dependency> REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
 
 include_directories(
   include
@@ -23,7 +24,7 @@ add_executable(lidar_node
 )
 ament_target_dependencies(lidar_node rclcpp std_msgs sensor_msgs)
 
-target_link_libraries(pose_pub_node
+target_link_libraries(lidar_node
   ${rclcpp_LIBRARIES} -lzmq 
 )
 
