added a new Remote Control Node for the shelfino mobile robot

--- a/remote_control/CMakeLists.txt
+++ b/remote_control/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(ros2_interface)
+project(remote_control)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -10,30 +10,24 @@ find_package(ament_cmake REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
-find_package(rclcpp REQUIRED)
-find_package(std_msgs REQUIRED)
-find_package(sensor_msgs REQUIRED)
 
 include_directories(
   include
 )
 
-add_executable(shelfino_node 
-  src/shelfino_hw_publisher.cpp
+add_executable(remote_control_node 
+  src/remote_control.cpp
   src/hardwareglobalinterface.cpp
   src/Subscriber.cpp
-  src/Publisher.cpp
   src/RequesterSimple.cpp
-  src/Replier.cpp
 )
-ament_target_dependencies(shelfino_node rclcpp std_msgs sensor_msgs)
 
-target_link_libraries(shelfino_node
+target_link_libraries(remote_control_node
   ${rclcpp_LIBRARIES} -lzmq -lncurses
 )
 
 install(TARGETS
-  shelfino_node
+remote_control_node
   DESTINATION lib/${PROJECT_NAME})
 
 ament_package()
