--- a/ros2_interface/CMakeLists.txt
+++ b/ros2_interface/CMakeLists.txt
@@ -5,6 +5,8 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+add_definitions(-w)
+
 # find dependencies
 find_package(ament_cmake REQUIRED)
 # uncomment the following section in order to fill in
@@ -13,6 +15,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(nav_msgs REQUIRED)
 
 include_directories(
   include
@@ -26,7 +29,7 @@ add_executable(shelfino_node
   src/RequesterSimple.cpp
   src/Replier.cpp
 )
-ament_target_dependencies(shelfino_node rclcpp std_msgs sensor_msgs)
+ament_target_dependencies(shelfino_node rclcpp std_msgs sensor_msgs nav_msgs)
 
 target_link_libraries(shelfino_node
   ${rclcpp_LIBRARIES} -lzmq -lncurses
