--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,17 @@
 #FROM ubuntu:jammy
 FROM arm64v8/ubuntu:jammy 
+ARG DEBIAN_FRONTEND=noninteractive
+
+# copy all the files to the container
+ADD ./ros2_interface/ /root/ros2_ws/src
+
+# setup entrypoint
+COPY ./ros_entrypoint.sh /
+RUN bash -c "chmod +x /ros_entrypoint.sh"
 
 # Set locale
 RUN apt-get update && apt-get install -y locales && \
+    apt-get install apt-utils && \
     locale-gen en_US en_US.UTF-8 && \
     update-locale LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8 && \
     export LANG=en_US.UTF-8
@@ -19,14 +28,8 @@ RUN apt-get update && apt-get upgrade -y && \
     apt-get install -y ros-humble-desktop && \
     echo "source /opt/ros/humble/setup.bash" >> /root/.bashrc
 
-# setup entrypoint
-COPY ./ros_entrypoint.sh /
-
 # create environment folder
 RUN mkdir -p /root/ros2_ws/src
-
-# copy all the files to the container
-#ADD ./ros2_interface/ /root/ros2_ws/src
 
 ENTRYPOINT ["/ros_entrypoint.sh"]
 CMD ["bash"]
