architecture essentials are now fully working

--- a/docker/ros2_interface/CMakeLists.txt
+++ b/docker/ros2_interface/CMakeLists.txt
@@ -16,6 +16,9 @@ find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_ros REQUIRED)
+find_package(shelfino_interfaces REQUIRED)
 
 include_directories(
   include
@@ -29,11 +32,26 @@ add_executable(shelfino_node
   src/RequesterSimple.cpp
   src/Replier.cpp
 )
-ament_target_dependencies(shelfino_node rclcpp std_msgs sensor_msgs nav_msgs)
+ament_target_dependencies(shelfino_node 
+  rclcpp 
+  std_msgs 
+  sensor_msgs 
+  nav_msgs
+  tf2
+  tf2_ros
+  shelfino_interfaces
+)
 
 target_link_libraries(shelfino_node
   ${rclcpp_LIBRARIES} -lzmq
 )
+
+install(DIRECTORY launch
+  DESTINATION share/${PROJECT_NAME})
+
+install(DIRECTORY config
+  DESTINATION share/${PROJECT_NAME})
+
 
 install(TARGETS
   shelfino_node
