--- a/docker/ros2_interface/config/ufficio.yaml
+++ b/docker/ros2_interface/config/ufficio.yaml
@@ -1,7 +1,7 @@
-image: ufficio.pgm
+image: ufficio11.pgm
 mode: trinary
 resolution: 0.05
-origin: [-8.87, -11, 0]
+origin: [-2.36, -6.5, 0]
 negate: 0
 occupied_thresh: 0.65
 free_thresh: 0.25
