--- a/docker/shelfino_gazebo/CMakeLists.txt
+++ b/docker/shelfino_gazebo/CMakeLists.txt
@@ -21,13 +21,11 @@ find_package(ament_cmake REQUIRED)
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
 
-install(DIRECTORY launch
-  DESTINATION share/${PROJECT_NAME})
-
-install(DIRECTORY models
-  DESTINATION share/${PROJECT_NAME})
-
-install(DIRECTORY worlds
+install(DIRECTORY 
+        launch
+        config
+        models
+        worlds
   DESTINATION share/${PROJECT_NAME})
 
 ament_package()
