reorganized and removed tf publisher from shelfino_node, now I use the robot_state_publisher for the real robot too

--- a/docker/shelfino_node/CMakeLists.txt
+++ b/docker/shelfino_node/CMakeLists.txt
@@ -49,6 +49,8 @@ target_link_libraries(shelfino_node
 install(DIRECTORY 
         launch
         config
+        rviz
+        map
   DESTINATION share/${PROJECT_NAME})
 
 install(TARGETS
