--- a/docker/shelfino_gazebo/CMakeLists.txt
+++ b/docker/shelfino_gazebo/CMakeLists.txt
@@ -23,7 +23,7 @@ find_package(ament_cmake REQUIRED)
 
 install(DIRECTORY 
         launch
-        config
+        rviz
         models
         worlds
   DESTINATION share/${PROJECT_NAME})
