--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,5 +77,6 @@
         "vector": "cpp",
         "__bits": "cpp",
         "filesystem": "cpp"
-    }
+    },
+    "cmake.sourceDirectory": "${workspaceFolder}/ros1_version/hw_rplidar_reader"
 }
