--- a/shelfino_gazebo/models/shelfino/model.config
+++ b/shelfino_gazebo/models/shelfino/model.config
@@ -1,15 +1,15 @@
 <?xml version="1.0"?>
 <model>
-  <name>My Robot</name>
+  <name>Shelfino</name>
   <version>1.0</version>
   <sdf version='1.4'>model.sdf</sdf>
 
   <author>
-   <name>My Name</name>
-   <email>me@my.email</email>
+   <name>Placido Falqueto</name>
+   <email>placido.falqueto@unitn.it</email>
   </author>
 
   <description>
-    My awesome robot.
+    Mobile Robot of the University of Trento.
   </description>
 </model>
