--- a/shelfino_navigation/config/controller.yaml
+++ b/shelfino_navigation/config/controller.yaml
@@ -179,29 +179,17 @@ local_costmap:
       height: 3
       resolution: 0.05
       robot_radius: 0.22
-      plugins: ["inflation_layer", "obstacle_layer", "static_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
-        inflation_radius: 0.55
+        inflation_radius: 0.5
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
         observation_sources: scan
         scan:
-          topic: /scan
           topic: /shelfino2/scan
-          max_obstacle_height: 2.0
-          clearing: True
-          marking: True
-          raytrace_max_range: 3.0
-          raytrace_min_range: 0.0
-          obstacle_max_range: 2.5
-          obstacle_min_range: 0.0
           data_type: "LaserScan"
-          inf_is_valid: false
-      static_layer:
-        map_subscribe_transient_local: True
       always_send_full_costmap: True
 
 global_costmap:
@@ -211,21 +199,10 @@ global_costmap:
       robot_base_frame: shelfino2/base_link
       use_sim_time: False
       robot_radius: 0.22
-      plugins: ["obstacle_layer", "static_layer"]
-      obstacle_layer:
-        enabled: True
-        observation_sources: scan
-        scan:
-          topic: /shelfino2/scan
-          max_obstacle_height: 2.0
-          clearing: True
-          marking: True
-          raytrace_max_range: 3.0
-          raytrace_min_range: 0.0
-          obstacle_max_range: 2.5
-          obstacle_min_range: 0.0
-          data_type: "LaserScan"
-          inf_is_valid: false
+      inflation_layer:
+        plugin: "nav2_costmap_2d::InflationLayer"
+        cost_scaling_factor: 3.0
+        inflation_radius: 0.5
       static_layer:
         map_subscribe_transient_local: True
       always_send_full_costmap: True
