--- a/shelfino_navigation/config/shelfino_gazebo.yaml
+++ b/shelfino_navigation/config/shelfino_gazebo.yaml
@@ -44,7 +44,7 @@ bt_navigator:
     use_sim_time: False
     global_frame: map
     robot_base_frame: gazebo/base_link
-    odom_topic: /gazebo/odom
+    odom_topic: /odom
     bt_loop_duration: 10
     default_server_timeout: 20
     # 'default_nav_through_poses_bt_xml' and 'default_nav_to_pose_bt_xml' are use defaults:
@@ -115,7 +115,7 @@ controller_server:
     progress_checker_plugin: "progress_checker"
     goal_checker_plugins: ["goal_checker"]
     controller_plugins: ["FollowPath"]
-    odom_topic: "gazebo/odom"
+    odom_topic: "odom"
 
     # Progress checker parameters
     progress_checker:
@@ -142,12 +142,12 @@ controller_server:
       min_speed_theta: 0.0
       # Add high threshold velocity for turtlebot 3 issue.
       # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
-      acc_lim_x: 1.5
+      acc_lim_x: 0.5
       acc_lim_y: 0.0
-      acc_lim_theta: 2.2
-      decel_lim_x: -1.5
+      acc_lim_theta: 1.0
+      decel_lim_x: -0.5
       decel_lim_y: 0.0
-      decel_lim_theta: -2.2
+      decel_lim_theta: -1.0
       vx_samples: 20
       vy_samples: 5
       vtheta_samples: 20
@@ -179,7 +179,7 @@ local_costmap:
       height: 3
       resolution: 0.05
       robot_radius: 0.22
-      plugins: ["obstacle_layer", "inflation_layer"]
+      # plugins: ["obstacle_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
@@ -207,7 +207,7 @@ global_costmap:
       robot_base_frame: gazebo/base_link
       use_sim_time: False
       robot_radius: 0.22
-      plugins: ["static_layer", "inflation_layer"]
+      # plugins: ["static_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
