--- a/shelfino_navigation/config/shelfino_gazebo.yaml
+++ b/shelfino_navigation/config/shelfino_gazebo.yaml
@@ -120,7 +120,7 @@ controller_server:
     # Progress checker parameters
     progress_checker:
       plugin: "nav2_controller::SimpleProgressChecker"
-      required_movement_radius: 0.5
+      required_movement_radius: 0.005
       movement_time_allowance: 10.0
     # Goal checker parameters
     goal_checker:
@@ -136,7 +136,7 @@ controller_server:
       min_vel_y: 0.0
       max_vel_x: 0.2
       max_vel_y: 0.0
-      max_vel_theta: 1.0
+      max_vel_theta: 0.5
       min_speed_xy: 0.0
       max_speed_xy: 0.2
       min_speed_theta: 0.0
@@ -184,20 +184,20 @@ local_costmap:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
         inflation_radius: 0.5
-      obstacle_layer:
-        plugin: "nav2_costmap_2d::ObstacleLayer"
-        enabled: True
-        observation_sources: scan
-        scan:
-          topic: /gazebo/scan
-          data_type: "LaserScan"
-          max_obstacle_height: 2.0
-          clearing: True
-          marking: True
-          raytrace_max_range: 3.0
-          raytrace_min_range: 0.0
-          obstacle_max_range: 2.5
-          obstacle_min_range: 0.0
+      # obstacle_layer:
+      #   plugin: "nav2_costmap_2d::ObstacleLayer"
+      #   enabled: True
+      #   observation_sources: scan
+      #   scan:
+      #     topic: /gazebo/scan
+      #     data_type: "LaserScan"
+      #     max_obstacle_height: 2.0
+      #     clearing: True
+      #     marking: True
+      #     raytrace_max_range: 3.0
+      #     raytrace_min_range: 0.0
+      #     obstacle_max_range: 2.5
+      #     obstacle_min_range: 0.0
       always_send_full_costmap: True
 
 global_costmap:
