--- a/send_obstacles/CMakeLists.txt
+++ b/send_obstacles/CMakeLists.txt
@@ -9,6 +9,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(obstacles_msgs REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
@@ -19,6 +20,7 @@ add_executable(send_obstacles
 ament_target_dependencies(send_obstacles 
   rclcpp 
   geometry_msgs
+  obstacles_msgs
 )
 
 install(TARGETS
