--- a/shelfino_navigation/config/shelfino2.yaml
+++ b/shelfino_navigation/config/shelfino2.yaml
@@ -44,7 +44,7 @@ bt_navigator:
     use_sim_time: False
     global_frame: map
     robot_base_frame: shelfino2/base_link
-    odom_topic: /odom
+    odom_topic: shelfino2/odom
     bt_loop_duration: 10
     default_server_timeout: 20
     # 'default_nav_through_poses_bt_xml' and 'default_nav_to_pose_bt_xml' are use defaults:
@@ -115,7 +115,7 @@ controller_server:
     progress_checker_plugin: "progress_checker"
     goal_checker_plugins: ["goal_checker"]
     controller_plugins: ["FollowPath"]
-    odom_topic: "odom"
+    odom_topic: "shelfino2/odom"
 
     # Progress checker parameters
     progress_checker:
