Added two topics just for visualization in rviz of testing obstacles

--- a/send_obstacles/CMakeLists.txt
+++ b/send_obstacles/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(obstacles_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
@@ -21,6 +22,7 @@ ament_target_dependencies(send_obstacles
   rclcpp 
   geometry_msgs
   obstacles_msgs
+  std_msgs
 )
 
 install(TARGETS
