--- a/shelfino_navigation/config/gazebo.yaml
+++ b/shelfino_navigation/config/gazebo.yaml
@@ -205,7 +205,7 @@ global_costmap:
 map_server:
   ros__parameters:
     use_sim_time: False
-    yaml_filename: "turtlebot3_world.yaml"
+    yaml_filename: "hexagon_world.yaml"
     save_map_timeout: 5.0
 
 planner_server:
