--- a/controller/CMakeLists.txt
+++ b/controller/CMakeLists.txt
@@ -14,11 +14,12 @@ find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(nav_msgs REQUIRED)
 
-add_executable(controller src/controller.cpp src/data.cpp src/declarations.cpp)
+add_executable(controller src/controller.cpp src/data.cpp src/declarations.cpp src/a_star.cpp)
 ament_target_dependencies(controller rclcpp geometry_msgs obstacles_msgs tf2 tf2_ros nav_msgs)
 
 add_executable(teleop src/teleop.cpp)
 ament_target_dependencies(teleop rclcpp geometry_msgs obstacles_msgs tf2 tf2_ros)
+
 
 install(TARGETS
   controller
