--- a/controller/package.xml
+++ b/controller/package.xml
@@ -15,6 +15,9 @@
   <depend> tf2 </depend>
   <depend> tf2_ros </depend>
   <depend> nav_msgs </depend>
+  <depend> nav2_msgs </depend>
+  <depend> rclcpp_components </depend>
+  <depend> rclcpp_action </depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
